--- a/index.html
+++ b/index.html
@@ -2,7 +2,13 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="js/jquery-3.3.1.js" type="text/javascript"></script>
+    <script src = "js/game.js" type="text/javascript"></script>
+    <script src = "js/items.js" type="text/javascript"></script>
+    <script src = "js/monsters.js" type="text/javascript"></script>
+    <script src = "js/maps.js" type="text/javascript"></script>
+    <script src = "js/players.js" type="text/javascript"></script>
     <script src="js/scripts.js" type="text/javascript"></script>
     <link rel="stylesheet" href="css/bootstrap.css" type="text/css" media="all">
     <link rel="stylesheet" href="css/styles.css" type="text/css" media="all">
@@ -12,11 +18,27 @@
   </head>
   <body>
 
-    <!-- <div id="titleScreen">
-      <p id="title">Kel'garsh</p>
+    <div id="titleScreen">
+      <p id="title">Go'Leir</p>
       <p id="pressStart">Press "Start" to begin your adventure!</p>
-      <button id="startButton" type="button" name="button">Start</button>
-    </div> -->
+      <button id="startGame" type="button" name="button">Start</button>
+    </div>
+
+    <div id = "preGameScreen" class = "container wrapper">
+      <div id="intro">
+        <p>Dear Travelers of Great Renown,<br>
+          My name is Sir Jerroth of Stone Lake Keep, first officer to the Lady Hillinder of Stone Lake Keep. It is in these dire circumstances that I request your help. The Lady has been taken captive, and I stand accused of this horrible deed. I honorably await my trial, for I know that I remain innocent, but while I sit here waiting for judgement to fall, Lady Hillinder is taken farther from the safety of the keep.<br><br>
+          Please dear travelers, if you are the ones from the great tales, only you can help get her back. The Lady's captors were fleet of foot, but they seem to be slow of wit. Before I was detained I had enough time to write this message and hopefully leave a clue that could lead you to where she is being kept. Unfortunatley I did not have time to analyze the object in question, but if you are as great as the stories imply, it should be but a simple task.<br><br>
+          Again I implore you brave travelers, find the Lady Hillinder and rescue her from this great peril.<br><br>
+          Regards,<br>
+          Sir Jerroth</p>
+      </div>
+
+      <form id = "nameForm">
+        <input id = "userName" placeholder = "#nameForm">
+        <button type = "submit" class = "btn btn-info" id = "submitName">Submit</button>
+      </form>
+    </div>
 
     <div id="playScreen">
       <div id="playArea" class="container">
@@ -65,6 +87,12 @@
         </div>
       </div>
     </div>
+
+    <div id="deathScreen" class="wrapper">
+      <h1 id="deathNote">You have perished, but death is not the end. Try again, brave adventurer, if you dare...</h1>
+        <button id="startGame" type="button" name="button">Start</button>
+        <a href="index.html"><h3>Allons-y!</h3></a>
+      </div>
 
   </body>
 </html>
