adjust input boxes

--- a/index.html
+++ b/index.html
@@ -36,8 +36,9 @@
       </div>
 
       <form id = "nameForm">
-        <input id = "userName" placeholder = "#nameForm">
-        <button type = "submit" class = "btn btn-info" id = "submitName">Submit</button>
+        <input id = "userName" placeholder = "Declare your name!">
+        <br>
+        <button type="submit" id="submitName">Submit</button>
       </form>
     </div>
 
