add inCombat status for character

--- a/index 2.html
+++ b/index 2.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/styles.css">
     <script src = "js/jquery-3.3.1.js"></script>
+    <script src="descriptions/descriptions.js"type="text/javascript"></script>
     <script src = "js/game.js"></script>
     <script src = "js/items.js"></script>
     <script src =  "js/monsters.js"></script>
