add quest from npc

--- a/index 2.html
+++ b/index 2.html
@@ -73,8 +73,13 @@
       </div>
       <div class = "col-md-5 well">
         <div id = "climb">
+          <button id = "talkButton" class = "btn btn-info">Talk</button>
+          <button id = "yesButton" class = "btn btn-info">Yes</button>
+          <button id = "noButton" class = "btn btn-info">No</button>
+          <button id = "giveButton" class = "btn btn-info">Give</button>
+          <button id = "disarmButton" class = "btn btn-info">Disarm</button>
           <button id = "armButton" class = "btn btn-info">Arm <span class = "weaponName"></span></button>
-          <button id = "getButton" class = "btn btn-info">Get <span class = "getButtonFiller"></span></p>
+          <button id = "getButton" class = "btn btn-info">Get <span class = "getButtonFiller"></span></button>
           <button id = "fleeButton" class = "btn btn-warning">Flee</button>
           <button id = "fightButton" class = "btn btn-danger">Fight</button>
           <button id = "climbDownButton" class = "btn btn-info moveButton">Climb Down</button>
