connect arm button

--- a/index.html
+++ b/index.html
@@ -84,47 +84,17 @@
             <div id="actionArea" class="col-md-12">
               <button id = "lookButton">Look</button>
               <button id = "getButton">Take</button>
+              <button id = "armButton">Arm<span class = "weaponName"></span></button>
               <button id = "forwardButton" class = "moveButton">Onward!</button>
               <button id = "backButton" class = "moveButton">Go Back</button>
               <button id = "climbDownButton" class = "moveButton">Climb Down</button>
               <button id = "climbUpButton" class = "moveButton">Climb Up</button>
-            </div>
-          </div>
-        </div>
-
-        <div id="fightArea">
-          <div id="topDiv" class="row">
-            <div id="visualArea" class="col-md-3">
-              <div id="monsterPicture" class="row">
-                <img class="monster" src="img/monster-placeholder.png" alt="An image of a fearsome dragon">
-              </div>
-              <div id="itemArea" class="row">
-                <table class="table">
-                  <tr>
-                    <td><img class="icon" src="img/sword-placeholder.png" alt="A sword icon">Sword</td>
-                  </tr>
-                  <tr>
-                    <td><img class="icon" src="img/shield-placeholder.png" alt="A shield icon">Shield</td>                </tr>
-                  <tr>
-                    <td><img class="icon" src="img/journal-placeholder.png" alt="A scroll icon">Journal</td>
-                  </tr>
-                </table>
-              </div>
-            </div>
-            <div id="textArea" class="col-md-8">
-              <p>A great and terrible, but oddlt adorable dragon stands before you.</p>
-              <p>. . .</p>
-              <p>What do you do?</p>
-            </div>
-          </div>
-          <div id="midDiv" class="row">
-            <div id="actionArea" class="col-md-12">
-              <button id = "lookButton">Look</button>
-              <button id = "getButton">Take</button>
               <button id = "fightButton">Fight</button>
               <button id = "fleeButton">Flee</button>
             </div>
           </div>
+        </div>
+
         </div>
       </div>
       <div id="deathScreen" class="wrapper">
