adjust weapon box

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
               <div id="itemArea" class="row">
                 <table class="table">
                   <tr>
-                    <td><img class="icon" src="img/sword-placeholder.png" alt="A sword icon">Weapon<span id = "displayWeapon"></span></td>
+                    <td><img class="icon" src="img/sword-placeholder.png" alt="A sword icon">Weapon: <span id = "displayWeapon"></span></td>
                   </tr>
                   <tr>
                     <td><img id = "items" class="icon" src="img/potion-placeholder.png" alt="A shield icon">Items</td>                </tr>
