messwith text box order

--- a/index.html
+++ b/index.html
@@ -73,6 +73,8 @@
               <br><hr>
               <div id = "monsters"></div>
               <br><hr>
+              <div id = "friendlies"></div>
+              <br><hr>
               <div id="fightLog"></div>
               <br><hr>
               <div id = "items"></div>
@@ -82,9 +84,10 @@
           </div>
           <div class="row">
             <br><br>
-            <div id="name"><span id="showName"></span></div>
+
             <div id="userDiv" class="row">
               <div class="col-md-12">
+                <div id="name"><span id="showName"></span></div>
                 <div id = "fightDisplay">
                   <p>Health: <span id = "HP"></span><span id = "missingHP"></span></p>
                 </div>
