update icon pics

--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
               <div id="itemArea" class="row">
                 <table class="table">
                   <tr>
-                    <td><img class="icon" src="img/sword-placeholder.png" alt="A sword icon">Weapon: <span id = "displayWeapon"></span></td>
+                    <td><img class="icon" src="img/sword.png" alt="A sword icon">Weapon: <span id = "displayWeapon"></span></td>
                   </tr>
                   <tr>
-                    <td><img id = "items" class="icon" src="img/potion-placeholder.png" alt="A shield icon">Items: <span id="itemName"></span></td>                </tr>
+                    <td><img id = "itemPic" class="icon" src="img/bottle.png" alt="A shield icon">Items: <span id="inventory"></span></td>                </tr>
                   <tr>
-                    <td><img class="icon" src="img/journal-placeholder.png" alt="A scroll icon">Journal</td>
+                    <td><img class="icon" src="img/scroll.png" alt="A scroll icon">Journal</td>
                   </tr>
                 </table>
               </div>
