add rest button

--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
                 <button id = "giveButton">Give</button>
                 <button id = "disarmButton">Disarm <span id="disarmName"></span></button>
                 <button id = "lookButton">Look</button>
+                <button id = "restButton">Rest</button>
                 <button id = "getButton">Take <span id="getItemName"></span></button>
                 <button id = "armButton">Arm <span id="weaponName"></span></button>
                 <button id = "backButton" class = "moveButton">Go Back</button>
