add wizard, fortify method, and make monsters impassable when alive

--- a/index 2.html
+++ b/index 2.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css2/styles2.css">
     <script src = "js/jquery-3.3.1.js"></script>
     <script src="descriptions/descriptions.js"type="text/javascript"></script>
     <script src = "js/game.js"></script>
@@ -77,9 +77,10 @@
           <button id = "yesButton" class = "btn btn-info">Yes</button>
           <button id = "noButton" class = "btn btn-info">No</button>
           <button id = "giveButton" class = "btn btn-info">Give</button>
-          <button id = "disarmButton" class = "btn btn-info">Disarm</button>
-          <button id = "armButton" class = "btn btn-info">Arm <span class = "weaponName"></span></button>
-          <button id = "getButton" class = "btn btn-info">Get <span class = "getButtonFiller"></span></button>
+          <button id = "useButton" class = "btn btn-info"> Use <span id = "itemName"></span></button>
+          <button id = "disarmButton" class = "btn btn-info">Disarm <span id = "disarmName"></span></button>
+          <button id = "armButton" class = "btn btn-info">Arm <span id = "weaponName"></span></button>
+          <button id = "getButton" class = "btn btn-info">Get <span id = "getItemName"></span></button>
           <button id = "fleeButton" class = "btn btn-warning">Flee</button>
           <button id = "fightButton" class = "btn btn-danger">Fight</button>
           <button id = "climbDownButton" class = "btn btn-info moveButton">Climb Down</button>
