add winScreen with css styling

--- a/index.html
+++ b/index.html
@@ -27,12 +27,9 @@
 
     <div id = "preGameScreen" class = "container wrapper">
       <div id="intro">
-        <p>Dear Travelers of Great Renown,<br>
-          My name is Sir Jerroth of Stone Lake Keep, first officer to the Lady Hillinder of Stone Lake Keep. It is in these dire circumstances that I request your help. The Lady has been taken captive, and I stand accused of this horrible deed. I honorably await my trial, for I know that I remain innocent, but while I sit here waiting for judgement to fall, Lady Hillinder is taken farther from the safety of the keep.<br><br>
-          Please dear travelers, if you are the ones from the great tales, only you can help get her back. The Lady's captors were fleet of foot, but they seem to be slow of wit. Before I was detained I had enough time to write this message and hopefully leave a clue that could lead you to where she is being kept. Unfortunatley I did not have time to analyze the object in question, but if you are as great as the stories imply, it should be but a simple task.<br><br>
-          Again I implore you brave travelers, find the Lady Hillinder and rescue her from this great peril.<br><br>
-          Regards,<br>
-          Sir Jerroth</p>
+        <p>You set out from your village, at the urging of the town elders. This is what must be done, if it can be done at all. Your childhood friend and the lord's daughter, Emilie Hillinder, has been taken by the legendary flying beast, Go'Leir. A dragon famous in stories to frighten children, but a name that makes knights shake in their boots.</p>
+        <p>None will come to save the daughter of a lowly lord. And so it has fallen to you. You who are the fastest, strongest, and most clever in your village. Even if you weren't, she is a friend, and she will not be left to be the dragon's meal.</p>
+        <p>You set out immediately from your village, towards the mountains.</p>
       </div>
 
       <form id="nameForm">
@@ -121,6 +118,11 @@
         <h1 id="deathNote">You have perished, but death is not the end. Try again, brave adventurer, if you dare...</h1>
           <button id="startGame" type="button" name="button">Start</button>
           <a href="index.html"><h3>Allons-y!</h3></a>
+      </div>
+      <div id="winScreen" class="wrapper">
+        <h4 class="winNote">Go'Leir, the shadow of death and fiery beast that brings only destruction. The beast of all doom lays dead, a miserable corpse of evil glory. Amid the treasure you hear a cry for help, it's the lord's daughter. You rush over to the pile of gold, knocking crowns and coin to the ground, taking hold of the outreached hand. You pull, and then again. Both you and she struggle, but soon she is free.</h2>
+        <h4 class="winNote">Emilie looks worse for wear, having hid in the dragon's treasure to avoid her fate. She embraces you and holds on tight for several moments. When she lets you go, she reaches for the magic sword and looks at it, and then to the dead Go'Leir. Something in her has awoken, the same thing that awoke in you when she was taken.</h3>
+        <h4 class="winNote">Maybe together, the world doesn't have to be such a bleak place.</h2>
       </div>
     </div>
 
