revise button placement and styling

--- a/index.html
+++ b/index.html
@@ -92,21 +92,50 @@
             </div>
             <div id="actionArea" class="col-md-12">
               <div id="climb">
-                <button id = "talkButton">Talk</button>
-                <button id = "yesButton">Yes</button>
-                <button id = "noButton">No</button>
+                <div class="row">
+                  <div class="col-md-2">
+                    <button id = "climbUpButton" class = "moveButton">Climb Up</button>
+                  </div>
+                  <div class="col-md-2">
+                    <button id = "backButton" class = "moveButton">Go Back</button>
+                  </div>
+                  <div class="col-md-2">
+                    <button id = "forwardButton" class = "moveButton">Onward!</button>
+                  </div>
+                  <div class="col-md-2">
+                    <button id = "getButton">Take <span id="getItemName"></span></button>
+                  </div>
+                  <div class="col-md-2">
+                    <button id = "lookButton">Look</button>
+                  </div>
+                  <div class="col-md-2">
+                    <button id = "talkButton">Talk</button>
+                    <button id = "yesButton">Yes</button>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-md-2">
+                    <button id = "climbDownButton" class = "moveButton">Climb Down</button>
+                  </div>
+                  <div class="col-md-2">
+                    <button id = "fightButton">Fight</button>
+                  </div>
+                  <div class="col-md-2">
+                    <button id = "fleeButton">Flee</button>
+                  </div>
+                  <div class="col-md-2">
+                    <button id = "useButton"> Use <span id = "itemName"></span></button>
+                  </div>
+                  <div class="col-md-2">
+                    <button id = "armButton">Arm <span id="weaponName"></span></button>
+                    <button id = "disarmButton">Disarm <span id="disarmName"></span></button>
+                  </div>
+                  <div class="col-md-2">
+                    <button id = "noButton">No</button>
+                  </div>
+                </div>
                 <button id = "giveButton">Give</button>
-                <button id = "disarmButton">Disarm <span id="disarmName"></span></button>
-                <button id = "lookButton">Look</button>
                 <button id = "restButton">Rest</button>
-                <button id = "getButton">Take <span id="getItemName"></span></button>
-                <button id = "armButton">Arm <span id="weaponName"></span></button>
-                <button id = "backButton" class = "moveButton">Go Back</button>
-                <button id = "forwardButton" class = "moveButton">Onward!</button>
-                <button id = "climbDownButton" class = "moveButton">Climb Down</button>
-                <button id = "climbUpButton" class = "moveButton">Climb Up</button>
-                <button id = "fightButton">Fight</button>
-                <button id = "fleeButton">Flee</button>
               </div>
             </div>
           </div>
