add monster images

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <div class="row">
             <div id="visualArea" class="col-md-3">
               <div id="backgroundPicture" class="row">
-                <img class="visual" src="img/image-placeholder.jpg" alt="An image of a castle">
+                <img class="visual" src="img/mapOne.jpg" alt="An image of a forest">
               </div>
               <div id="itemArea" class="row">
                 <table class="table">
@@ -54,7 +54,7 @@
                     <td><img class="icon" src="img/sword.png" alt="A sword icon">Weapon: <span id = "displayWeapon"></span></td>
                   </tr>
                   <tr>
-                    <td><img id = "itemPic" class="icon" src="img/bottle.png" alt="A shield icon">Items: <span id="inventory"></span></td>                </tr>
+                    <td><img id = "itemPic" class="icon" src="img/bottle.png" alt="A bottle icon">Items: <span id="inventory"></span></td>                </tr>
                   <tr>
                     <td><img class="icon" src="img/scroll.png" alt="A scroll icon">Journal</td>
                   </tr>
@@ -68,11 +68,22 @@
                 </div>
               </div>
               <br><hr>
+              <div id="fightLog"></div>
               <div id = "monsters"></div>
+              <img id="dragon" src="img/dragon.png" alt="an image of a dragon">
+              <img id="deadDragon" src="img/deadDragon.png" alt="an image of a dead dragon">
+              <img id="goblin" src="img/goblin.png" alt="an image of a goblin">
+              <img id="deadGoblin" src="img/deadGoblin.png" alt="an image of a dead goblin">
+              <img id="ogre" src="img/ogre.png" alt="an image of a ogre">
+              <img id="deadOgre" src="img/deadOgre.png" alt="an image of a dead ogre">
+              <img id="skeleton" src="img/skeleton.png" alt="an image of a skeleton">
+              <img id="deadSkeleton" src="img/deadSkeleton.png" alt="an image of a dead skeleton">
+              <img id="golem" src="img/golem.png" alt="an image of a golem">
+              <img id="deadGolem" src="img/deadGolem.png" alt="an image of a dead golem">
               <br><hr>
               <div id = "friendlies"></div>
               <br><hr>
-              <div id="fightLog"></div>
+
               <br><hr>
               <div id = "items"></div>
 
