put background images into index

--- a/index.html
+++ b/index.html
@@ -47,6 +47,17 @@
             <div id="visualArea" class="col-md-3">
               <div id="backgroundPicture" class="row">
                 <img class="visual" src="img/mapOne.jpg" alt="An image of a forest">
+                <img class="visual" src="img/mapTwo.jpg" alt="An image of a forest floor">
+                <img class="visual" src="img/mapThree.jpg" alt="An image of a purple forest">
+                <img class="visual" src="img/mapFour.jpg" alt="An image of a dark forest">
+                <img class="visual" src="img/mapFive.jpg" alt="An image of a town">
+                <img class="visual" src="img/mapSix.jpg" alt="An image of a yellow forest">
+                <img class="visual" src="img/mapSeven.jpg" alt="An image of a path into town">
+                <img class="visual" src="img/mapEight.jpg" alt="An image of a waterfall">
+                <img class="visual" src="img/mapNine.jpg" alt="An image of a stalagtite cave">
+                <img class="visual" src="img/mapTen.jpg" alt="An image of a mountain">
+                <img class="visual" src="img/mapEleven.jpg" alt="An image of a cave entrance">
+                <img class="visual" src="img/mapTwelve.jpg" alt="An image of a green mountain">
               </div>
               <div id="itemArea" class="row">
                 <table class="table">
@@ -70,16 +81,16 @@
               <br><hr>
               <div id="fightLog"></div>
               <div id = "monsters"></div>
-              <img id="dragon" src="img/dragon.png" alt="an image of a dragon">
-              <img id="deadDragon" src="img/deadDragon.png" alt="an image of a dead dragon">
-              <img id="goblin" src="img/goblin.png" alt="an image of a goblin">
-              <img id="deadGoblin" src="img/deadGoblin.png" alt="an image of a dead goblin">
-              <img id="ogre" src="img/ogre.png" alt="an image of a ogre">
-              <img id="deadOgre" src="img/deadOgre.png" alt="an image of a dead ogre">
-              <img id="skeleton" src="img/skeleton.png" alt="an image of a skeleton">
-              <img id="deadSkeleton" src="img/deadSkeleton.png" alt="an image of a dead skeleton">
-              <img id="golem" src="img/golem.png" alt="an image of a golem">
-              <img id="deadGolem" src="img/deadGolem.png" alt="an image of a dead golem">
+              <!-- <img id="dragon" class="monsterImg" src="img/dragon.png" alt="an image of a dragon">
+              <img id="deadDragon" class="monsterImg" src="img/deadDragon.png" alt="an image of a dead dragon">
+              <img id="goblin" class="monsterImg" src="img/goblin.png" alt="an image of a goblin">
+              <img id="deadGoblin" class="monsterImg" src="img/deadGoblin.png" alt="an image of a dead goblin">
+              <img id="ogre" class="monsterImg" src="img/ogre.png" alt="an image of a ogre">
+              <img id="deadOgre" class="monsterImg" src="img/deadOgre.png" alt="an image of a dead ogre">
+              <img id="skeleton" class="monsterImg" src="img/skeleton.png" alt="an image of a skeleton">
+              <img id="deadSkeleton" class="monsterImg" src="img/deadSkeleton.png" alt="an image of a dead skeleton">
+              <img id="golem" class="monsterImg" src="img/golem.png" alt="an image of a golem">
+              <img id="deadGolem" class="monsterImg" src="img/deadGolem.png" alt="an image of a dead golem"> -->
               <br><hr>
               <div id = "friendlies"></div>
               <br><hr>
